just fiddling with the layout a bit.

--- a/public/game.html
+++ b/public/game.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+	<canvas id="start_screen"></canvas>
+
+	
 	<canvas id="battle_canvas"></canvas>
 	<canvas id="worldmap_canvas"></canvas>
 
@@ -28,9 +31,7 @@
 		
 	</div>
 
-	<div id="start_screen">
-		
-	</div>
+	
 </body>
 
 </html>
