added fabric repo to the project.

--- a/public/game.html
+++ b/public/game.html
@@ -1,36 +1,29 @@
+<!DOCTYPE html>
+
 <html>
 
-<head>
-	<style>
-		.dirt1{
-			background:url("/images/enderswarm/dirt1.png");
-			width:16px;
-			height:16px;
-			float:left;
-		}
-		
-		.clear{
-			clear:both;
-		}
-	</style>
-</head>
+	<head>
+		<link type="text/css" rel="stylesheet" href="/stylesheets/m.css">
+		<script src="/javascripts/m.js"></script>
+	</head>
 
 <body>
-	<canvas id="start_screen"></canvas>
+	<div id="content">
+		<canvas id="start_screen"></canvas>
+		hello
+	
+		<canvas id="battle_canvas"></canvas>
+		<canvas id="worldmap_canvas"></canvas>
 	
 	
-	<canvas id="battle_canvas"></canvas>
-	<canvas id="worldmap_canvas"></canvas>
-	
-	
-	<div id="battle_menu">
+		<div id="battle_menu">
 		
-	</div>
+		</div>
 	
-	<div id="character_menu">
+		<div id="character_menu">
 		
+		</div>
 	</div>
-	
 	
 </body>
 
