--- a/public/game.html
+++ b/public/game.html
@@ -3,13 +3,18 @@
 <html>
 
 	<head>
+		<!-- 	Webfonts	 -->
+		<link rel="stylesheet" href="/fonts/ffvi/stylesheet.css" type="text/css" charset="utf-8" />
+		
+		
 		<link type="text/css" rel="stylesheet" href="/stylesheets/m.css">
-
+	
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script src="/javascripts/fabric.js/dist/all.js"></script>
-
-    <script src="/javascripts/ifClasses/sceneDirector.js"></script>
-    <script src="/javascripts/titleScreen.js"></script>
+	
+	    <script src="/javascripts/ifClasses/sceneDirector.js"></script>
+	    <script src="/javascripts/ifClasses/battleScreen.js"></script>
+	    <script src="/javascripts/titleScreen.js"></script>
 		<script src="/javascripts/keyboard.js"></script>
 		<script src="/javascripts/m.js"></script>
 		
@@ -24,14 +29,25 @@
   </audio>
   
 	<div id="content">
-    <canvas id="start_screen"></canvas>
+    <canvas id="title_screen"></canvas>
 	
-    <canvas id="battle_canvas"></canvas>
+    <canvas id="battle_screen"></canvas>
     <canvas id="worldmap_canvas"></canvas>
 	
 	
     <div id="battle_menu">
-		
+		  <div id="enemies" class="menu_border">
+		    <ul>
+		      <li>Lobo</li>
+		      <li>Krang</li>
+		      <li>Eclipse</li>
+		      <li>Blue Power Ranger</li>
+		    </ul>
+	  	</div>
+	  	
+	  	<div id="party" class="menu_border">
+	  	  
+	  	</div>
     </div>
 	
     <div id="character_menu">
