really cruising along with the logic and classes of the battle screen.  I just started a convention where 'public' methods shall start with a capital letter, and 'private' will be lower case, just to make it look nicer.

--- a/public/credits.html
+++ b/public/credits.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html><title>Credits</title>
+
 I'm putting credits in this file, a long with links to resources I guess maybe...
 
 
@@ -8,8 +10,8 @@ http://darkangelx.deviantart.com/art/Final-Fantasy-Script-Coll-14351194
 
 
 
-
-
+Font Converter to Webfont - Font Squirrel
+http://www.fontsquirrel.com/fontface/generator/
 
 
 
