--- a/public/game.html
+++ b/public/game.html
@@ -15,6 +15,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script src="/javascripts/fabric.js/dist/all.js"></script>
 	  
+	  <script src="/javascripts/globals.js"></script>
 	  <script src="/javascripts/ifClasses/mob.js"></script>
 	  <script src="/javascripts/ifClasses/sceneDirector.js"></script>
     <script src="/javascripts/ifClasses/battleScreen.js"></script>
