refactor complete on title screen.  Time to refactor battleScreen.

--- a/public/game.html
+++ b/public/game.html
@@ -16,6 +16,7 @@
 		<script src="/javascripts/fabric.js/dist/all.js"></script>
 	  
 	  <script src="/javascripts/globals.js"></script>
+	  <script src="/javascripts/ifClasses/screen.js"></script>
 	  <script src="/javascripts/ifClasses/mob.js"></script>
 	  <script src="/javascripts/ifClasses/sceneDirector.js"></script>
     <script src="/javascripts/ifClasses/battleScreen.js"></script>
