i've been coding so long with out a commit.  It's cause I'm cleaning up so many loose ends.

--- a/public/game.html
+++ b/public/game.html
@@ -43,10 +43,10 @@
   </audio>
   
   <div id="content">
-    <canvas id="title_screen"></canvas>
+    <canvas id="title_screen" width="1000px" height="600px"></canvas>
     
-    <canvas id="battle_screen"></canvas>
-    <canvas id="worldmap_screen"></canvas>
+    <canvas id="battle_screen" width="1000px" height="400px"></canvas>
+    <canvas id="worldmap_screen" width="1000px" height="600px"></canvas>
     
 
     <div id="battle_menu">
