created a Unit abstract class whitch mobs now inherits from and heroes soon will inherit from.

--- a/public/credits.html
+++ b/public/credits.html
@@ -16,8 +16,10 @@ http://www.fontsquirrel.com/fontface/generator/
 
 
 
+Rips for Cecil hero - Ryan914
+http://spritedatabase.net/file/2990
 
 
 
-
+Don't forget the music in the title screen!
 
