--- a/public/game.html
+++ b/public/game.html
@@ -17,7 +17,9 @@
 	  
 	  <script src="/javascripts/globals.js"></script>
 	  <script src="/javascripts/ifClasses/screen.js"></script>
+	  <script src="/javascripts/ifClasses/unit.js"></script>
 	  <script src="/javascripts/ifClasses/mob.js"></script>
+	  <script src="/javascripts/ifClasses/hero.js"></script>
 	  <script src="/javascripts/ifClasses/sceneDirector.js"></script>
     <script src="/javascripts/ifClasses/battleScreen.js"></script>
     <script src="/javascripts/titleScreen.js"></script>
