fiddling with the timers... they're now all canvas elements.  Startup PERFORMANCE TOOK A HUGE HIT NOW.  I'll need to look into it.

--- a/public/game.html
+++ b/public/game.html
@@ -75,8 +75,9 @@
 	  	      <div class="health_divider">/</div>
 	  	      <div class="max_hp">450</div>
 	  	      <div class="current_mp"> 224 </div>
-	  	      <div class="time">  
-	  	        <div id="h01-fill" class="fill"></div>
+	  	      <div class="time">
+	  	        <!-- <div id="h01-fill" class="fill"></div> -->
+	  	        <canvas class="wait_bar" width="100" height="10"></canvas>
 	  	      </div>
 	  	    </li>
 	  	    <div class="clear"></div>
@@ -87,8 +88,8 @@
             <div class="health_divider">/</div>
             <div class="max_hp">450</div>
             <div class="current_mp"> 224 </div>
-            <div class="time">  
-              <div class="fill"></div>
+            <div class="time">
+              <canvas class="wait_bar" width="100" height="10"></canvas>
             </div>
           </li>
           <div class="clear"></div>
@@ -99,8 +100,8 @@
             <div class="health_divider">/</div>
             <div class="max_hp">450</div>
             <div class="current_mp"> 224 </div>
-            <div class="time">  
-              <div class="fill"></div>
+            <div class="time">
+              <canvas class="wait_bar" width="100" height="10"></canvas>
             </div>
           </li>
           <div class="clear"></div>
@@ -111,8 +112,8 @@
             <div class="health_divider">/</div>
             <div class="max_hp">450</div>
             <div class="current_mp"> 224 </div>
-            <div class="time">  
-              <div class="fill"></div>
+            <div class="time">
+              <canvas class="wait_bar" width="100" height="10"></canvas>
             </div>
           </li>
           <div class="clear"></div>
