wow... Ok, so I'm done optimizing now for a while.  If I run FireFox with addons disabled, it runs as fast as chrome which doesn't have any addons installed...

--- a/public/credits.html
+++ b/public/credits.html
@@ -24,4 +24,5 @@ http://spritedatabase.net/file/2990
 Don't forget the music in the title screen!
 
 
-
+Final fantasy 2 maps and saves
+http://www.fantasyanime.com/finalfantasy/ff4/ff4maps.htm
