--- a/public/game.html
+++ b/public/game.html
@@ -15,7 +15,8 @@
 		
 		<link type="text/css" rel="stylesheet" href="/stylesheets/m.css">
 	
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<!-- 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
+		<script src="/javascripts/jquery-1.7.2.min.js"></script>
 		<script src="/javascripts/fabric.js/dist/all.js"></script>
 	  
 	  <script src="/javascripts/globals.js"></script>
