fiddling with some form of regression on the status bars.  The algorithm is a tad complicated.  I think it should be redone...  But it's optimized.  It runs terribly slow on the iPad now though...

--- a/public/game.html
+++ b/public/game.html
@@ -59,7 +59,7 @@
     
     <div id="battle_menu">
       <div id="action_buttons">
-        <a class="fight_button" onclick="javascript:actionMenu.fight('fight_button');"><div id="fight_button" class="action_buttons">Fight</div></a>
+        <a class="fight_button" onmousedown="javascript:actionMenu.fight('fight_button');"><div id="fight_button" class="action_buttons">Fight</div></a>
       </div>
 		  <div id="enemies" class="menu_border">
 		    
