added a lot of new content, and I'm just now starting to refactor herosTurnEffect_flashingOutline() so that it's attached to the unit directly...  once it's in the right class... I need to make it so other animation's effect on the unit are taken into account so the right square get's it's black colors inverted properly...

--- a/public/credits.html
+++ b/public/credits.html
@@ -26,3 +26,10 @@ Don't forget the music in the title screen!
 
 Final fantasy 2 maps and saves
 http://www.fantasyanime.com/finalfantasy/ff4/ff4maps.htm
+
+
+Final Fantasy sounds:
+http://www.finalfantasyforums.net/threads/20518-Final-Fantasy-Sound-Effects
+http://www.rpgamer.com/games/ff/ff6/ff6snd.html
+
+
