back to slow development.  I'm using my new WebAudio API now, which is cool...  Working on killing off mobs now...

--- a/public/game.html
+++ b/public/game.html
@@ -18,6 +18,7 @@
 <!-- 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
 		<script src="/javascripts/jquery-1.7.2.min.js"></script>
 		<script src="/javascripts/fabric.js/dist/all.js"></script>
+	  <script src="/javascripts/webAudioApiForDesigners/webAudioApiForDesigners.js"></script>
 	  
 	  
     <script src="/javascripts/globals.js"></script>
