i'm in the middle of implimenting a queue for the ready heroes.... but I'm too sleepy to go on... and things are getting a little wonky... and I'm only half done...

--- a/public/game.html
+++ b/public/game.html
@@ -33,7 +33,7 @@
     <script src="/javascripts/titleScreen.js"></script>
     <script src="/javascripts/m.js"></script>
 		
-		<script src="/javascripts/keyboard.js"></script>
+		<script src="/javascripts/userInput.js"></script>
 		<script src="/javascripts/debugging.js"></script>
 		
 	</head>
