--- a/public/game.html
+++ b/public/game.html
@@ -5,7 +5,7 @@
 	<head>
 	  <meta charset="UTF-8">
 	  <title>Initial Fantasy</title>
-      <link rel="shortcut icon" href="http://192.168.0.11:3000/favicon2.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="/favicon2.ico" type="image/x-icon" />
     
     
 	  
